Fix z-index button

--- a/app/styles/_modal.scss
+++ b/app/styles/_modal.scss
@@ -100,6 +100,7 @@
   padding: 1rem;
   background: transparent;
   border: 0;
+  z-index: 2; // on top of .Modal-pager
   
   svg {
     fill: white;
